# imgbatch

./: .gitignore  README.ja.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
src/imgbatch/: __init__.py  cli.py  core.py  utils.py
tests/: test_cli.py  test_core.py  test_utils.py
